visibility-fix

--- a/product.css
+++ b/product.css
@@ -524,7 +524,7 @@ aside.sidebar {
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-color: rgba(255, 255, 255, 0.449);
+    background-color: rgba(255, 255, 255, 0.734);
     z-index: 1000;
 }
 
