--- a/style.css
+++ b/style.css
@@ -361,7 +361,7 @@ a:hover {
   top: 0; left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(252, 251, 251, 0.611);
   z-index: 1000
 }
 
